1) Bug fix - Dashboard widgets - Prevented charts from overflowing out of widgets 2) Bug fix - Google adwords for getChannelData

--- a/public/css/angular-gridster/style_gridster.css
+++ b/public/css/angular-gridster/style_gridster.css
@@ -10,12 +10,15 @@ ul {
 }
 .box {
     height: 100%;
+    /*display: table;*/
     border: 1px solid #ccc;
     background-color: #fff;
     box-shadow: 0 1px 10px 1px #C9C9C9;
     /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);*/
 }
 .box-header {
+    width: 100%;
+    height: 40px;
     background-color: #1AB394;
     padding: 0 30px 0 10px;
     border-bottom: 1px solid #1AB394;
@@ -28,8 +31,11 @@ ul {
     display: inline-block;
 }
 .box-content {
-    padding: 10px;
-    height: 90%;
+    padding: 5px;
+    width: 100%;
+    /*position: absolute;*/
+    top: 40px;
+    bottom: 0;
 }
 .box-header-btns {
     top: 15px;
